--- a/ExtrovertidoVsIntrovertidos.ipynb
+++ b/ExtrovertidoVsIntrovertidos.ipynb
@@ -40,7 +40,10 @@
         "\n",
         "**Hipótese 1:** Indivíduos classificados como extrovertidos tendem a passar mais horas em redes sociais em comparação com os introvertidos.\n",
         "\n",
-        "**Hipótese 2:** Pessoas introvertidas tendem a ter medo de palco.\n"
+        "**Hipótese 2:** Pessoas introvertidas tendem a ter medo de palco.\n",
+        "\n",
+        "**Hipótese 3:** Pessoas introvertidas tendem a passar mais tempo dentro de casa.\n",
+        "\n"
       ],
       "metadata": {
         "id": "IfHzurekS2Ja"
