--- a/ExtrovertidoVsIntrovertidos.ipynb
+++ b/ExtrovertidoVsIntrovertidos.ipynb
@@ -952,7 +952,6 @@
         "# --- Histograma ---\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Traduções\n",
         "traducoes = {\n",
         "    'Time_spent_Alone': 'Tempo Gasto Sozinho',\n",
         "    'Stage_fear': 'Medo de Palco',\n",
@@ -1362,15 +1361,11 @@
         "import pandas as pd\n",
         "from scipy.stats import chi2_contingency\n",
         "\n",
-        "# Etapa de segurança para garantir que as colunas são numéricas\n",
         "df['Personality'] = pd.to_numeric(df['Personality'])\n",
-        "df['Stage_fear'] = pd.to_numeric(df['Stage_fear']) # Mapeado anteriormente (Não=0, Sim=1)\n",
+        "df['Stage_fear'] = pd.to_numeric(df['Stage_fear'])\n",
         "\n",
-        "# 1. Criar a Tabela de Contingência\n",
-        "# Esta tabela cruza as duas variáveis para contar as ocorrências de cada combinação\n",
         "contingency_table = pd.crosstab(df['Personality'], df['Stage_fear'])\n",
         "\n",
-        "# Renomear os índices e colunas para clareza na exibição\n",
         "contingency_table.index = ['Introvertido (0)', 'Extrovertido (1)']\n",
         "contingency_table.columns = ['Sem Medo (0)', 'Com Medo (1)']\n",
         "\n",
@@ -1379,15 +1374,12 @@
         "print(contingency_table)\n",
         "print(\"\\n\" + \"=\"*40 + \"\\n\")\n",
         "\n",
-        "# 2. Executar o Teste Qui-Quadrado\n",
         "chi2, p_value, dof, expected = chi2_contingency(contingency_table)\n",
         "\n",
-        "# 3. Exibir os resultados\n",
         "print(\"--- Resultado do Teste Qui-Quadrado ---\")\n",
         "print(f\"Estatística do Qui-Quadrado: {chi2:.4f}\")\n",
         "print(f\"P-valor (p-value): {p_value:.4f}\")\n",
         "\n",
-        "# 4. Interpretar o resultado com base no p-valor\n",
         "alpha = 0.05\n",
         "if p_value < alpha:\n",
         "    print(\"\\nConclusão: O P-valor é menor que 0.05.\")\n",
